--- a/src/test/resources/config/object.properties
+++ b/src/test/resources/config/object.properties
@@ -544,3 +544,9 @@ Seller.HomePage.ManageCombo.AddCombo.Button=//button[text()='Thêm combo']
 Seller.Item.Select=//li[contains(text(),'option')]
 
 
+Facebook.Login.Username.Input=//input[@id='email']
+Facebook.Login.Password.Input=//input[@id='pass']
+Facebook.Login.Login.Button=//button[@name='login']
+Facebook.Login.Success.Message=//span[text()="Video tr\u1EF1c ti\u1EBFp"]
+
+
